feat: hard-cutover external naming to Memories

--- a/webui/index.html
+++ b/webui/index.html
@@ -10,7 +10,7 @@
   <div class="backdrop"></div>
   <main class="shell">
     <header class="hero">
-      <p class="eyebrow">FAISS MEMORY</p>
+      <p class="eyebrow">Memories MEMORY</p>
       <h1>Memory Observatory</h1>
       <p class="subtitle">Browse, filter, and inspect stored memories without leaving the browser.</p>
     </header>
